--- a/MANUALHTML/count.html
+++ b/MANUALHTML/count.html
@@ -116,7 +116,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -135,7 +135,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 04 神奈川県 16 小田原市 45 21 24 39 03
 $ </pre>
 
-      <pre class="cmd">$ count 1 2 data		←県ごとの市の数を数えて出力
+      <pre class="prettyprint">$ count 1 2 data		←県ごとの市の数を数えて出力
 01 埼玉県 3
 02 東京都 6
 03 千葉県 3
@@ -147,7 +147,7 @@ $ </pre>
       <p><a href="gyo.html">gyo(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
