--- a/MANUALHTML/getfirst.html
+++ b/MANUALHTML/getfirst.html
@@ -116,7 +116,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat date		←元データ  商品コード 商品名 販売日 売れ数
+      <pre class="prettyprint">$ cat date		←元データ  商品コード 商品名 販売日 売れ数
 0000007 セロリ 20060201 117
 0000007 セロリ 20060202 136
 0000007 セロリ 20060203 221
@@ -134,7 +134,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0000030 じゃが芋 20060203 184
 $ </pre>
 
-      <pre class="cmd">$ getfirst 1 2 data		←同一商品コード/商品名の最初の行のみ出力
+      <pre class="prettyprint">$ getfirst 1 2 data		←同一商品コード/商品名の最初の行のみ出力
 0000007 セロリ 20060201 117
 0000017 練馬大根 20060201 31
 0000021 温州みかん 20060201 90
@@ -146,7 +146,7 @@ $ </pre>
 
       <p>"+ng"オプションを指定すると、同じキーフィールドの値を持つ行の最初の行以外を標準エラー出力に出力する。</p>
 
-      <pre class="cmd">$ getfirst +ng 1 2 data &gt; /dev/null 2&gt; data2
+      <pre class="prettyprint">$ getfirst +ng 1 2 data &gt; /dev/null 2&gt; data2
 $ cat data2
 0000007 セロリ 20060202 136
 0000007 セロリ 20060203 221
@@ -164,7 +164,7 @@ $ </pre>
 
       <p>+ng オプションに&lt;fd&gt;を指定すると、標準エラー出力のかわりに&lt;fd&gt;への出力が実施される。</p>
 
-      <pre class="cmd">$ getfirst +ng4 1 2 data &gt; /dev/null 4&gt; data2
+      <pre class="prettyprint">$ getfirst +ng4 1 2 data &gt; /dev/null 4&gt; data2
 $ cat data2
 0000007 セロリ 20060202 136
 0000007 セロリ 20060203 221
@@ -182,7 +182,7 @@ $ </pre>
 
       <p>フィールド分割において連続する空白は1つの空白とみなされる。また、行頭の空白は無視される。例えば、キーフィールド指定が1と2の場合、次の2行は同じキーフィールドを持つとみなされる。</p>
 
-      <pre class="source">0000007 セロリ 20060202 136
+      <pre class="prettyprint linenums">0000007 セロリ 20060202 136
 0000007  セロリ 20060203 221</pre>
 
       <h3>【関連項目】</h3>
@@ -190,7 +190,7 @@ $ </pre>
       <p><a href="ctail.html">ctail(1)</a>、<a href="getlast.html">getlast(1)</a>、<a href="tcat.html">tcat(1)</a>、<a href="ycat.html">ycat(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
