--- a/MANUALHTML/index.html
+++ b/MANUALHTML/index.html
@@ -156,10 +156,16 @@
         <dd>テキストデータの桁そろえ</dd>
         <dt><a href="keycut.html">keycut(1)</a></dt>
         <dd>キーでファイルを分割</dd>
+        <dt><a href="lcalc.html">lcalc(1)</a></dt>
+        <dd>フィールドの高精度演算(整数18桁+小数18桁)</dd>
+        <dt><a href="lineup.html">lineup(1)</a></dt>
+        <dd>指定したフィールドのデータのラインナップを抽出</dd>
         <dt><a href="loopj.html">loopj(1)</a></dt>
         <dd>複数のテキストファイル全行を連結</dd>
         <dt><a href="loopx.html">loopx(1)</a></dt>
         <dd>総掛けで連結</dd>
+        <dt><a href="maezero.html">maezero(1)</a></dt>
+        <dd>前にゼロをつける</dd>
         <dt><a href="map.html">map(1)</a></dt>
         <dd>縦型ファイルを縦キー/横キー形式の表に変換</dd>
         <dt><a href="marume.html">marume(1)</a></dt>
@@ -182,12 +188,16 @@
         <dd>列をカウント</dd>
         <dt><a href="self.html">self(1)</a></dt>
         <dd>指定したフィールドのデータ取り出し</dd>
+        <dt><a href="sisu.html">sisu(1)</a></dt>
+        <dd>指数(構成比)を計算</dd>
         <dt><a href="sm2.html">sm2(1)</a></dt>
         <dd>キー単位での値の集計</dd>
         <dt><a href="sm4.html">sm4(1)</a></dt>
         <dd>小計、中計</dd>
         <dt><a href="sm5.html">sm5(1)</a></dt>
         <dd>大計</dd>
+        <dt><a href="sorter.html">sorter(1)</a></dt>
+        <dd>キーでファイル分割(キーに関して整列不要)</dd>
         <dt><a href="tarr.html">tarr(1)</a></dt>
         <dd>横型のデータを縦型に展開</dd>
         <dt><a href="tateyoko.html">tateyoko(1)</a></dt>
