--- a/MANUALHTML/lcalc.html
+++ b/MANUALHTML/lcalc.html
@@ -99,91 +99,72 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>gyo(1)</h2>
+      <h2>lcalc(1)</h2>
 
       <h3>【名前】</h3>
 
-      <p>gyo : 行をカウント</p>
+      <p>lcalc : フィールドの高精度演算(整数18桁+小数18桁)</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">Usage	: gyo [-f] &lt;file&gt; ...
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
+      <pre class="list">Usage   : lcalc &lt;script&gt; &lt;files&gt;...
+Option  : --divzero[=&lt;string&gt;]
+          --overflow[=&lt;string&gt;]
+          -d
+Version : Thu Feb 13 02:26:23 JST 2014</pre>
 
       <h3>【説明】</h3>
 
-      <p>引数のファイルまたは標準入力のテキストデータの行数(行数)をカウントして出力する。</p>
+      <p>引数のファイルまたは標準入力のテキストデータの各フィールドに対して&lt;script&gt;にしたがった演算を行う。&lt;script&gt;では式、フィールド、フィールド範囲を単独またはカンマで区切って複数指定することができる。</p>
+
+      <p>式の演算は整数18桁+小数18桁の36桁で行われる。式では定数、NF(入力フィールド数)、NR(入力レコード数)、二項演算子(+、-、*、/、%)、単項演算子(-、$)、丸め関数(round()、age()、sage())、括弧を使うことができる。</p>
+
+      <p>$演算子は入力のフィールドを表す。オペランドは整数に切り捨てられる。切り捨てられた結果が1からNFの範囲になければならない。</p>
+
+      <p>丸め関数はround()が四捨五入、age()が切り上げ、sage()が切り捨てを行う。第1引数の値を第2引数で指定される桁位置で丸める。第2引数は整数定数のみが許されている。第2引数が0で始まる場合は整数部分の桁位置を、0以外で始まる場合は小数部分の桁位置を示す。たとえばsage(123.456, 01)は120.000になり、sage(123.456, 1)は123.400 になる。</p>
+
+      <p>式の出力形式は「整数部.小数部」となる。整数部は必要な桁数(1〜18)、小数部は常に18桁。ただし、演算結果が整数になる場合は小数点および小数部は表示されない。</p>
+
+      <p>式でオーバーフローが発生した場合はlcalcの実行が中止される。--overflowオプションを指定した場合は、その式の計算が放棄されオプションで指定された文字列が出力され、lcalcの実行が継続される。文字列の指定を省略した場合はovflw が出力される。</p>
+
+      <p>除算および剰余算において右オペランドが0の場合は演算結果が0になる。--divzeroオプションを指定した場合は、その演算を含む式の計算が放棄されオプションで指定された文字列が出力される。文字列の指定を省略した場合はdiv/0が出力される。</p>
+
+      <p>フィールドは「$式」の形式で入力のフィールドを表す。式の値は整数に切り捨てられる。切り捨てられた結果が0からNFの範囲になければならない。0の場合は入力行全体となる。$演算子との違いは数値に変換されるか否かとなる。たとえばスクリプトが'$1,($2)'で入力が123.456 123.456の場合、出力は123.456 123.456000000000000000となる。</p>
+
+      <p>フィールド範囲は$[式:式]の形式で連続した複数の入力のフィールドを表す。スクリプトの構成要素間には任意個の空白類(改行文字を含む)を置くことができる。#から行末まではコメントになる。コメントは空白を置ける場所に置くことができる。</p>
+
+      <p>-dオプションを指定するとファイルを読み込まずスクリプトを直接実行する。この場合$演算子、フィールド、フィールド範囲は使えない。</p>
 
       <h3>【例1】</h3>
 
       <pre class="prettyprint">$ cat data
-0000000 浜地______ 50 F 91 59 20 76 54
-0000001 鈴田______ 50 F 46 39 8  5  21
-0000003 杉山______ 26 F 30 50 71 36 30
-0000004 白土______ 40 M 58 71 20 10 6
-0000005 崎村______ 50 F 82 79 16 21 80
-0000007 梶川______ 42 F 50 2  33 15 62
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data
-6
+01 埼玉県 91 59 20 76 54.1
+01 埼玉県 46 39 8 5 21.2
+01 埼玉県 82 0 23 84 10.3
+02 東京都 30 50 71 36 30.4
+02 東京都 58 71 20 10 6.5
+04 神奈川県 92 56 83 96 75.6
+$ lcalc '$1, $2, $3 / $4 + $5 * $6, $7' data
+01 埼玉県 1521.542372881355932203 54.1
+01 埼玉県 41.179487179487179487 21.2
+01 埼玉県 1932 10.3
+02 東京都 2556.600000000000000000 30.4
+02 東京都 200.816901408450704225 6.5
+04 神奈川県 7969.642857142857142857 75.6
 $ </pre>
 
       <h3>【例2】</h3>
 
-      <p>複数のファイルの行数を一度にカウントできる。</p>
-
-      <pre class="prettyprint">$ cat data1
-1 file1
-2 file1
-3 file1
-$ </pre>
-
-      <pre class="prettyprint">$ cat data2
-1 file2
-2 file2
-$ </pre>
-
-      <pre class="prettyprint">$ cat data3
-1 file3
-2 file3
-3 file3
-4 file3
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data1 data2 data3
-3
-2
-4
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>"-f"オプションを使用するとファイル名と行数をそれぞれ表示する。</p>
-
-      <pre class="prettyprint">$ gyo -f data1 data2 data3
-data1 3
-data2 2
-data3 4
-$ </pre>
-
-      <h3>【備考】</h3>
-
-      <p>ファイル名に - を指定すると標準入力ファイルを期待する。</p>
-
-      <pre class="prettyprint">$ cat data2 |  gyo -f data1 - data3
-data1 3
-data2 2
-data3 4
+      <pre class="prettyprint">$ lcalc -d '1.23 * 3.45 / 3'
+1.414500000000000000
 $ </pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="count.html">count(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
-
+      <p><a href="field-format.html">フィールド形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">last modified: 2014-04-02 16:03:02</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
