--- a/MANUALHTML/maezero.html
+++ b/MANUALHTML/maezero.html
@@ -99,91 +99,64 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>gyo(1)</h2>
+      <h2>maezero(1)</h2>
 
       <h3>【名前】</h3>
 
-      <p>gyo : 行をカウント</p>
+      <p>maezero : 前にゼロをつける</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">Usage	: gyo [-f] &lt;file&gt; ...
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
+      <pre class="list">Usage   : maezero &lt;f1.w1&gt; &lt;f2.w2&gt; .. &lt;file&gt;
+Option  : --ngthrough &lt;str&gt;
+Version : Mon Dec  9 17:52:22 JST 2013</pre>
 
       <h3>【説明】</h3>
 
-      <p>引数のファイルまたは標準入力のテキストデータの行数(行数)をカウントして出力する。</p>
+      <p>引数のファイルまたは標準入力ファイルの指定フィールドを指定した桁数にて前ゼロパディングを行う。</p>
 
       <h3>【例1】</h3>
 
-      <pre class="prettyprint">$ cat data
-0000000 浜地______ 50 F 91 59 20 76 54
-0000001 鈴田______ 50 F 46 39 8  5  21
-0000003 杉山______ 26 F 30 50 71 36 30
-0000004 白土______ 40 M 58 71 20 10 6
-0000005 崎村______ 50 F 82 79 16 21 80
-0000007 梶川______ 42 F 50 2  33 15 62
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data
-6
+      <pre class="prettyprint">$ at data
+12 345 6789
+$ maezero 1.5 2.6 data
+00012 000345 6789
 $ </pre>
 
       <h3>【例2】</h3>
 
-      <p>複数のファイルの行数を一度にカウントできる。</p>
+      <p>指定フィールドの内容が--ngthroughオプションで指定した文字列の場合は前ゼロパディングを行わない。</p>
 
-      <pre class="prettyprint">$ cat data1
-1 file1
-2 file1
-3 file1
-$ </pre>
-
-      <pre class="prettyprint">$ cat data2
-1 file2
-2 file2
-$ </pre>
-
-      <pre class="prettyprint">$ cat data3
-1 file3
-2 file3
-3 file3
-4 file3
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data1 data2 data3
-3
-2
-4
+      <pre class="prettyprint">$ maezero --ngthrough 345 1.5 2.6 data
+00012 345 6789
 $ </pre>
 
       <h3>【例3】</h3>
 
-      <p>"-f"オプションを使用するとファイル名と行数をそれぞれ表示する。</p>
+      <p>続したフィールドを指定することができる。</p>
 
-      <pre class="prettyprint">$ gyo -f data1 data2 data3
-data1 3
-data2 2
-data3 4
+      <pre class="prettyprint">$ maezero 1.6/3.6 data
+000012 000345 006789
+$ </pre>
+
+      <h3>【例4】</h3>
+
+      <p>フィールド指定にNFやNF-&lt;n&gt;を使うことがでる。</p>
+
+      <pre class="prettyprint">$ maezero NF-1.6 data
+12 000345 6789
 $ </pre>
 
       <h3>【備考】</h3>
 
-      <p>ファイル名に - を指定すると標準入力ファイルを期待する。</p>
-
-      <pre class="prettyprint">$ cat data2 |  gyo -f data1 - data3
-data1 3
-data2 2
-data3 4
-$ </pre>
+      <p>maezero(1)コマンドはフィールドの内容に関しては何もチェックしていない。またフィールドの長さがすでに指定桁数を越えている時はそのフィールドに関しては処理を行わない。なお、指定フィールドは昇順になっている必要がある。</p>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="count.html">count(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
-
+      <p><a href="field-format.html">フィールド形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">last modified: 2014-33-27 18:02:27</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
