--- a/MANUALHTML/mime-read.html
+++ b/MANUALHTML/mime-read.html
@@ -119,7 +119,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <p>mime-fileの中からabc.xlsで指定される名前のセクションを取り出す。</p>
 
-      <pre class="cmd">$ mime-read abc.xls mime-file &gt; abc.xls</pre>
+      <pre class="prettyprint">$ mime-read abc.xls mime-file &gt; abc.xls</pre>
 
       <h3>【関連項目】</h3>
 
@@ -127,7 +127,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-39-27 13:02:27</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
