--- a/MANUALHTML/up3.html
+++ b/MANUALHTML/up3.html
@@ -116,7 +116,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat <a href="master-file.html">master</a>
+      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
 a店 1日目 103 62		←1日目から3日目までのデータ
 a店 2日目 157 94
 a店 3日目 62 30
@@ -128,7 +128,7 @@ c店 2日目 76 49
 c店 3日目 38 21
 $ </pre>
 
-      <pre class="cmd">$ cat <a href="transaction-file.html">tran</a>		← 4日目から5日目までのデータ
+      <pre class="prettyprint">$ cat <a href="transaction-file.html">tran</a>		← 4日目から5日目までのデータ
 a店 4日目 131 84
 a店 5日目 189 111
 b店 4日目 198 105
@@ -137,7 +137,7 @@ c店 4日目 81 48
 c店 5日目 98 61
 $ </pre>
 
-      <pre class="cmd">$ up3 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a>
+      <pre class="prettyprint">$ up3 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a>
 a店 1日目 103 62
 a店 2日目 157 94
 a店 3日目 62 30
@@ -163,7 +163,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-28-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
