--- a/MANUALHTML/ctail.html
+++ b/MANUALHTML/ctail.html
@@ -119,7 +119,7 @@ UTF-8</pre>
 
       <h3>【例】ファイルの末尾3行を削って表示する。</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 001 北海道
 002 東北
 003 関東
@@ -131,7 +131,7 @@ UTF-8</pre>
 009 沖縄
 $ </pre>
 
-      <pre class="cmd">$ ctail -3 data &gt; data2
+      <pre class="prettyprint">$ ctail -3 data &gt; data2
 $ cat data2
 001 北海道
 002 東北
@@ -143,11 +143,11 @@ $ </pre>
 
       <h3>【例2】ファイルの末尾nバイトを削る</h3>
 
-      <pre class="cmd">$ echo -n abcde | ctail -1c
+      <pre class="prettyprint">$ echo -n abcde | ctail -1c
 abcd
 $ </pre>
 
-      <pre class="cmd">$ echo -n abcde | ctail -2c
+      <pre class="prettyprint">$ echo -n abcde | ctail -2c
 abc
 $ </pre>
 
@@ -156,7 +156,7 @@ $ </pre>
       <p><a href="getfirst.html">getfirst(1)</a>、<a href="getlast.html">getlast(1)</a>、<a href="tcat.html">tcat(1)</a>、<a href="ycat.html">ycat(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
