--- a/MANUALHTML/dayslash.html
+++ b/MANUALHTML/dayslash.html
@@ -140,7 +140,7 @@ Version : Mon Dec 12 19:38:29 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ echo 20120304 | dayslash yyyy/mm/dd 1
+      <pre class="prettyprint">$ echo 20120304 | dayslash yyyy/mm/dd 1
 2012/03/04
 $ echo 050607 | dayslash H時M分S秒 1
 5時6分7秒
@@ -152,7 +152,7 @@ $ </pre>
 
       <h3>【例2】</h3>
 
-      <pre class="cmd">$ echo 2012/03/04 | dayslash -r yyyy/mm/dd 1
+      <pre class="prettyprint">$ echo 2012/03/04 | dayslash -r yyyy/mm/dd 1
 20120304
 $ echo 5時6分7秒 | dayslash -r H時M分S秒 1
 050607
@@ -166,7 +166,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-30-16 17:04:16</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
