--- a/MANUALHTML/divsen.html
+++ b/MANUALHTML/divsen.html
@@ -116,7 +116,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 20060201 296030 6710000
 20060202 1300100 3130000
 20060203 309500 20100
@@ -125,7 +125,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 20060206 771100 400000
 $ </pre>
 
-      <pre class="cmd">$ divsen 2 3 data		←2フィールドと3フィールドを1,000で除算
+      <pre class="prettyprint">$ divsen 2 3 data		←2フィールドと3フィールドを1,000で除算
 20060201 296 6710
 20060202 1300 3130
 20060203 310 20
@@ -136,7 +136,7 @@ $ </pre>
 
       <p>-sを指定して小数点まで表示させる。こうしたデータは以降で<a href="marume.html">marume(1)</a>などを使って加工する。　</p>
 
-      <pre class="cmd">$ divsen -s 2 3 data		←小数点まで表示
+      <pre class="prettyprint">$ divsen -s 2 3 data		←小数点まで表示
 20060201 296.030 6710.000
 20060202 1300.100 3130.000
 20060203 309.500 20.100
@@ -154,7 +154,7 @@ $ </pre>
       <p><a href="marume.html">marume(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
