--- a/MANUALHTML/field-format.html
+++ b/MANUALHTML/field-format.html
@@ -122,7 +122,7 @@
 
       <p>フィールド形式のファイル例は次のとおり。</p>
 
-      <pre class="source">0001 20111008 23 F 0.845814
+      <pre class="prettyprint linenums">0001 20111008 23 F 0.845814
 0002 20111009 15 M 0.193475
 0003 20111010 81 F 0.484983
 0004 20111011 15 F 0.491736
@@ -147,7 +147,7 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-40-06 13:02:06</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
