--- a/MANUALHTML/filehame.html
+++ b/MANUALHTML/filehame.html
@@ -116,7 +116,7 @@ Version	: Thu Aug  2 14:07:28 JST 2012</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat template
+      <pre class="prettyprint">$ cat template
 &lt;html&gt;
 &lt;meta&gt;
 &lt;!-- label1 --&gt;
@@ -127,7 +127,7 @@ Version	: Thu Aug  2 14:07:28 JST 2012</pre>
 &lt;/html&gt;
 $ </pre>
 
-      <pre class="cmd">$ cat data1
+      <pre class="prettyprint">$ cat data1
 &lt;script type="javascript/text"&gt;
 	function sb(i) {
 		submit(getElementById(i))
@@ -135,11 +135,11 @@ $ </pre>
 &lt;/script&gt;
 $ </pre>
 
-      <pre class="cmd">$ cat data2
+      <pre class="prettyprint">$ cat data2
 &lt;input id="123" type="button" onclick=sb('123') value="push" /&gt;
 $ </pre>
 
-      <pre class="cmd">
+      <pre class="prettyprint">
 $ filehame -llabel1 template file1 | filehame -llabel2 - file2
 &lt;html&gt;
 &lt;meta&gt;
@@ -162,7 +162,7 @@ $
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-31-16 17:04:16</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
