--- a/MANUALHTML/formhame.html
+++ b/MANUALHTML/formhame.html
@@ -119,7 +119,7 @@ Version : Sun Mar 17 12:51:52 JST 2013</pre>
 
       <h3>【例】</h3>
 
-      <pre class="cmd">$ cat html
+      <pre class="prettyprint">$ cat html
 &lt;html&gt;&lt;body&gt;
 &lt;form name="name_form"&gt;
 &lt;input type="text" name="name_text1" /&gt;
@@ -140,7 +140,7 @@ Version : Sun Mar 17 12:51:52 JST 2013</pre>
 &lt;/body&gt;&lt;/html&gt;
 $ </pre>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 name_text1 hello
 name_text2          
 name_radio b
@@ -149,7 +149,7 @@ name_textarea usp\nlaboratory
 name_pulldown pd3
 $ </pre>
 
-      <pre class="cmd">$ formhame html data 
+      <pre class="prettyprint">$ formhame html data 
 &lt;html&gt;&lt;body&gt;
 &lt;form name="name_form"&gt;
 &lt;input type="text" name="name_text1"  value="hello" /&gt;
@@ -197,7 +197,7 @@ name_pulldown pd2</pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-49-16 17:04:16</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
