--- a/MANUALHTML/join1.html
+++ b/MANUALHTML/join1.html
@@ -128,14 +128,14 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <p>経費ファイルkeihiから<a href="master-file.html">master</a>に登録されている4人のデータを抽出し、<a href="master-file.html">マスタファイル</a>の内容を連結する。</p>
 
-      <pre class="cmd">$ cat <a href="master-file.html">master</a>
+      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-      <pre class="cmd">$ cat keihi
+      <pre class="prettyprint">$ cat keihi
 20070401 0000001 300
 20070403 0000001 500
 20070404 0000001 700
@@ -151,7 +151,7 @@ $ </pre>
 
       <p>keihiの第2フィールドをキーにして<a href="master-file.html">master</a>を結合する。<a href="master-file.html">master</a>に存在するキーをもつ行にしか連結を行わない。存在しない行は捨てられる。keihiは同じキーを持つ行が複数行あっても構わない。</p>
 
-      <pre class="cmd">$ join1 key=2 <a href="master-file.html">master</a> keihi
+      <pre class="prettyprint">$ join1 key=2 <a href="master-file.html">master</a> keihi
 20070401 0000003 杉山______ 26 F 200
 20070402 0000003 杉山______ 26 F 400
 20070405 0000003 杉山______ 26 F 600
@@ -166,14 +166,14 @@ $ </pre>
 
       <p>左から順に連続した複数のフィールドをキーに指定する場合は次のように実行する。kekkaファイルの第2フィールド、第2フィールドをキーにして(第2、第3フィールド順に整列されている)<a href="master-file.html">master</a>ファイル(第1、第2フィールドの順に整列されている)に存在する行のみ抽出して、<a href="master-file.html">master</a>の内容を連結して出力している。</p>
 
-      <pre class="cmd">$ cat <a href="master-file.html">master</a>
+      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
 A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
 $ </pre>
 
-      <pre class="cmd">$ cat kekka
+      <pre class="prettyprint">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
 3 A 0000003 30 50 71 36 30
@@ -186,7 +186,7 @@ $ </pre>
 10 C 0000011 92 56 83 96 75
 $ </pre>
 
-      <pre class="cmd">$ join1 key=2/3 <a href="master-file.html">master</a> kekka
+      <pre class="prettyprint">$ join1 key=2/3 <a href="master-file.html">master</a> kekka
 3 A 0000003 杉山______ 26 F 30 50 71 36 30
 5 A 0000005 崎村______ 50 F 82 79 16 21 80
 6 B 0000007 梶川______ 42 F 50 2  33 15 62
@@ -195,20 +195,20 @@ $ </pre>
 
       <p>左から順に連続していない複数のフィールドをキーに指定することも可能。この場合は複数のキーフィールドを@でつなげて指定する。なお次の例の場合には、<a href="transaction-file.html">tran</a>は第4、第2フィールドの順に整列され、<a href="master-file.html">master</a>は第3、第1フィールドの順に整列されていることが必要となる。</p>
 
-      <pre class="cmd">$ join1 key=4@2 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
+      <pre class="prettyprint">$ join1 key=4@2 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
 
       <h3>【例3】"+ng" オプション</h3>
 
       <p><a href="master-file.html">master</a>とキーに一致しない行を抽出することも可能。キーに一致する行は標準出力に、一致しない行は標準エラー出力に出力される。この場合、一致する行は<a href="master-file.html">マスタファイル</a>と連結されるが、一致しない行は<a href="master-file.html">マスタファイル</a>に存在しないため連結されずそのまま出力されることになる。</p>
 
-      <pre class="cmd">$ cat <a href="master-file.html">master</a>
+      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
 $ </pre>
 
-      <pre class="cmd">$ cat kekka
+      <pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -223,16 +223,16 @@ $ </pre>
 
       <p>成績ファイルkekkaから<a href="master-file.html">master</a>に登録されている4名のデータとその他のデータはそれぞれ次のように抽出できる。</p>
 
-      <pre class="cmd">$ join1 +ng key=1 <a href="master-file.html">master</a> kekka &gt; ok-data 2&gt; ng-data</pre>
+      <pre class="prettyprint">$ join1 +ng key=1 <a href="master-file.html">master</a> kekka &gt; ok-data 2&gt; ng-data</pre>
 
-      <pre class="cmd">$ cat ok-data		←　一致したデータ
+      <pre class="prettyprint">$ cat ok-data		←　一致したデータ
 0000003 杉山______ 26 F 30 50 71 36 30
 0000005 崎村______ 50 F 82 79 16 21 80
 0000007 梶川______ 42 F 50 2  33 15 62
 0000010 柳本______ 50 F 95 60 35 93 76
 $ </pre>
 
-      <pre class="cmd">$ cat ng-data		←　一致しなかったデータ
+      <pre class="prettyprint">$ cat ng-data		←　一致しなかったデータ
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000004 58 71 20 10 6
@@ -247,7 +247,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-35-02 11:08:02</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
