--- a/MANUALHTML/juni.html
+++ b/MANUALHTML/juni.html
@@ -121,7 +121,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <p>行番号を付与する。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 0000007 セロリ 100
 0000017 練馬大根 95
 0000021 温州みかん 80
@@ -129,7 +129,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0000030 じゃが芋 30
 $ </pre>
 
-      <pre class="cmd">$ juni data
+      <pre class="prettyprint">$ juni data
 1 0000007 セロリ 100
 2 0000017 練馬大根 95
 3 0000021 温州みかん 80
@@ -141,7 +141,7 @@ $ </pre>
 
       <p>キーが関係する場合、キーの開始フィールドと終了フィールドを指定して、同一キーを持つ行どうしにおける順位を行頭に付与する。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 関東 パスタ 100
 関東 おにぎり 90
 関東 パン 40
@@ -150,7 +150,7 @@ $ </pre>
 九州 パスタ 100
 $ </pre>
 
-      <pre class="cmd">$ juni 1 1 data
+      <pre class="prettyprint">$ juni 1 1 data
 1 関東 パスタ 100
 2 関東 おにぎり 90
 3 関東 パン 40
@@ -163,7 +163,7 @@ $ </pre>
 
       <p>-hオプションを指定した場合、各キーフィールドの順位を階層的に出力する。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 A A1 A11 A111
 A A1 A11 A112
 A A1 A12 A121
@@ -182,7 +182,7 @@ B B2 B22 B221
 B B2 B22 B222
 $ </pre>
 
-      <pre class="cmd">$ juni -h 1 3 data
+      <pre class="prettyprint">$ juni -h 1 3 data
 1 1 1 A A1 A11 A111
 1 1 1 A A1 A11 A112
 1 1 2 A A1 A12 A121
@@ -205,7 +205,7 @@ $ </pre>
 
       <p>-hオプションでキーを指定しない場合には、第1フィールドから最終フィールドまでをキーフィールドとみなす。</p>
 
-      <pre class="cmd">$ juni -h data
+      <pre class="prettyprint">$ juni -h data
 1 1 1 1 A A1 A11 A111
 1 1 1 2 A A1 A11 A112
 1 1 2 1 A A1 A12 A121
@@ -229,7 +229,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
