--- a/MANUALHTML/loopj.html
+++ b/MANUALHTML/loopj.html
@@ -118,21 +118,21 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】基本的な使い方</h3>
 
-      <pre class="cmd">$ cat file1
+      <pre class="prettyprint">$ cat file1
 0000003 杉山______ A
 0000005 崎村______ B
 0000007 梶川______ C
 0000010 柳本______ D
 $ </pre>
 
-      <pre class="cmd">$ cat file2
+      <pre class="prettyprint">$ cat file2
 0000000 50
 0000003 26
 0000004 40
 0000009 68
 $ </pre>
 
-      <pre class="cmd">$ cat file3
+      <pre class="prettyprint">$ cat file3
 0000000 F
 0000003 F
 0000004 M
@@ -141,7 +141,7 @@ $ </pre>
 
       <p>3つのファイルを連結するには次のようにコマンドを実行する。</p>
 
-      <pre class="cmd">$ loopj num=1 file1 file2 file3
+      <pre class="prettyprint">$ loopj num=1 file1 file2 file3
 0000000 0 0 50 F
 0000003 杉山______ A 26 F
 0000004 0 0 40 M
@@ -153,13 +153,13 @@ $ </pre>
 
       <p>ファイル名を-にすることで、標準入力ファイルを連結することができる。</p>
 
-      <pre class="cmd">$ cat file2 | loopj num=1 file1 - file3</pre>
+      <pre class="prettyprint">$ cat file2 | loopj num=1 file1 - file3</pre>
 
       <h3>【例2】-d オプション</h3>
 
       <p>-dオプションを使用することで補完する文字列を指定することができる。</p>
 
-      <pre class="cmd">$ loopj -d@@@ num=1 file1 file2 file3
+      <pre class="prettyprint">$ loopj -d@@@ num=1 file1 file2 file3
 0000000 @@@ @@@ 50 F
 0000003 杉山______ A 26 F
 0000004 @@@ @@@ 40 M
@@ -173,26 +173,26 @@ $ </pre>
 
       <p>キーのみを持つファイルを連結した場合には値のみ補完が実施される。</p>
 
-      <pre class="cmd">$ cat file1
+      <pre class="prettyprint">$ cat file1
 0001 1
 0002 2
 $ </pre>
 
-      <pre class="cmd">$ cat file2
+      <pre class="prettyprint">$ cat file2
 0001
 0002
 0003
 0004
 $ </pre>
 
-      <pre class="cmd">$ loopj num=1 file1 file2
+      <pre class="prettyprint">$ loopj num=1 file1 file2
 0001 1
 0002 2
 0003 0
 0004 0
 $ </pre>
 
-      <pre class="cmd">$ loopj num=1 file2 file2
+      <pre class="prettyprint">$ loopj num=1 file2 file2
 0001
 0002
 0003
@@ -203,20 +203,20 @@ $ </pre>
 
       <p>連結するファイルが0バイトの時はエラーになる。</p>
 
-      <pre class="cmd">$ : &gt; data1
+      <pre class="prettyprint">$ : &gt; data1
 $ cat data2
 a 1
 b 2
 c 3
 $ </pre>
 
-      <pre class="cmd">$ loopj num=1 data1 data2
+      <pre class="prettyprint">$ loopj num=1 data1 data2
 Errorloopj] : 0バイトファイル[1]は連結できません。
 $ </pre>
 
       <p>上記の例でdata1が、例えば3フィールドあることを保証するには、次のようにコマンドを実行すれば良い。</p>
 
-      <pre class="cmd">$ [ ! -s data1 ] &amp;&amp; echo x 0 0 &gt; data1
+      <pre class="prettyprint">$ [ ! -s data1 ] &amp;&amp; echo x 0 0 &gt; data1
 $ loopj num=1 data1 data2 |  awk '$1!~/x/
 a 0 0 1
 b 0 0 2
@@ -229,7 +229,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
