--- a/MANUALHTML/loopx.html
+++ b/MANUALHTML/loopx.html
@@ -118,22 +118,22 @@ Version	: Thu Jan 12 18:35:55 JST 2012</pre>
 
       <p>ファイルdata1、data2、data3を総掛けすると、例えば次のようになる。</p>
 
-      <pre class="cmd">$ cat data1
+      <pre class="prettyprint">$ cat data1
 1 農業
 2 工業
 $ </pre>
 
-      <pre class="cmd">$ cat data2
+      <pre class="prettyprint">$ cat data2
 A 東京
 B 大阪
 $ </pre>
 
-      <pre class="cmd">$ cat data3
+      <pre class="prettyprint">$ cat data3
 晴
 雨
 $ </pre>
 
-      <pre class="cmd">$ loopx data1 data2 data3
+      <pre class="prettyprint">$ loopx data1 data2 data3
 1 農業 A 東京 晴
 1 農業 A 東京 雨
 1 農業 B 大阪 晴
@@ -151,7 +151,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
