--- a/MANUALHTML/map.html
+++ b/MANUALHTML/map.html
@@ -122,14 +122,14 @@ Version	: Sat Dec 10 21:04:17 JST 2011
 
       <p>縦型データをmap(1)するには次のようにコマンドを実行する。num=&lt;n&gt;の値は縦キーのフィールド数を表す。この例ではnumの値は縦キーの最後のフィールドを指し示す2を指定する必要がある。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 001 a店 01/01 103		←縦キー 縦キー 横キー データ部
 001 a店 01/02 157
 002 b店 01/01 210
 002 b店 01/02 237
 $ </pre>
 
-      <pre class="cmd">$ map num=2 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map num=2 data |  <a href="keta.html">keta</a>
 *   * 01/01 01/02
 001 a店   103   157
 002 b店   210   237
@@ -139,12 +139,12 @@ $ </pre>
 
       <p>データに欠落がある場合、データが存在しない場所に値0が補完される。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 001 a店 01/01 103
 002 b店 01/02 237
 $ </pre>
 
-      <pre class="cmd">$ map num=2 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map num=2 data |  <a href="keta.html">keta</a>
 *   * 01/01 01/02
 001 a店   103     0
 002 b店     0   237
@@ -154,7 +154,7 @@ $ </pre>
 
       <p>データ部が複数列ある場合には複数行にマッピングが実施される。この時、各行にはA B C ...と順にインデックスが追加される。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 a店 1日目 103 62		←縦キー 横キー 売数 客数
 a店 2日目 157 94
 a店 3日目 62 30
@@ -165,7 +165,7 @@ d店 6日目 98 69
 d店 7日目 101 90
 $ </pre>
 
-      <pre class="cmd">$ map num=1 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map num=1 data |  <a href="keta.html">keta</a>
 * * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 A   103   157    62   131   189   350   412
 a店 B    62    94    30    84   111    20   301
@@ -181,7 +181,7 @@ $ </pre>
 
       <p>例2の結果をさらにsed(1)コマンドでAを売数、Bを客数に置換すると次のような表になる。</p>
 
-      <pre class="cmd">$ map num=1 data |  sed -e 's/A/売数/1' -e 's/B/客数/1' | <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map num=1 data |  sed -e 's/A/売数/1' -e 's/B/客数/1' | <a href="keta.html">keta</a>
 *    * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 売数   103   157    62   131   189   350   412
 a店 客数    62    94    30    84   111    20   301
@@ -197,7 +197,7 @@ $ </pre>
 
       <p>+yarrオプションを指定することでデータ部の複数列を横に展開することができる。</p>
 
-      <pre class="cmd">$ map +<a href="yarr.html">yarr</a> num=1 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1 data |  <a href="keta.html">keta</a>
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
 *     a     b     a     b     a     b  --     a     b	←自動的に追加される
 a店   103    62   157    94    62    30  --   412   301
@@ -206,7 +206,7 @@ c店    81    52    76    49    38    21  --   136   110
 d店    75    48    72    42    34    19  --   101    90
 $ </pre>
 
-      <pre class="cmd">$ map +<a href="yarr.html">yarr</a> num=1 data |  sed -e '2s/a/売数/g' -e '2s/b/客数/g' | <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1 data |  sed -e '2s/a/売数/g' -e '2s/b/客数/g' | <a href="keta.html">keta</a>
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
 *  売数  客数  売数  客数  売数  客数  --  売数  客数
 a店   103    62   157    94    62    30  --   412   301
@@ -217,7 +217,7 @@ $ </pre>
 
       <p>横インデックスが不要な場合には+arrオプションを使用する。</p>
 
-      <pre class="cmd">$ map +arr num=1 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ map +arr num=1 data |  <a href="keta.html">keta</a>
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
 a店   103    62   157    94    62    30  --   412   301
 b店   210   113   237   121   150    82  --   589   493
@@ -229,13 +229,13 @@ $ </pre>
 
       <p>-mオプションで補完文字を指定できる。デフォルトは0。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 A a 1
 A b 2
 B a 4
 $ </pre>
 
-      <pre class="cmd">$ map -m@ num=1 data
+      <pre class="prettyprint">$ map -m@ num=1 data
 * a b
 A 1 2
 B 4 @
@@ -245,14 +245,14 @@ $ </pre>
 
       <p>-&lt;数値&gt;オプションを妻うことで&lt;数値&gt;フィールド分ずつmap(1)を実施することができる。&lt;数値&gt;はデータ部のフィールド数の約数である必要がある。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 X x 1 2 3 4 5 6		←データ部を1 2 3と4 5 6というように3つずmapしたい
 X y 1 2 3 4 5 6
 Y x 1 2 3 4 5 6
 Y y 1 2 3 4 5 6
 $ </pre>
 
-      <pre class="cmd">$ map -3 num=1 data		←3フィールド分ずmap(1)する
+      <pre class="prettyprint">$ map -3 num=1 data		←3フィールド分ずmap(1)する
 * * x x y y
 * * a b a b
 X A 1 4 1 4
@@ -263,7 +263,7 @@ Y B 2 5 2 5
 Y C 3 6 3 6
 $ </pre>
 
-      <pre class="cmd">$ map +<a href="yarr.html">yarr</a> -3 num=1 data		←+<a href="yarr.html">yarr</a>の場合、3フィールド分ずつ折り返し
+      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> -3 num=1 data		←+<a href="yarr.html">yarr</a>の場合、3フィールド分ずつ折り返し
 * * x x x y y y
 * * a b c a b c
 X A 1 2 3 1 2 3
@@ -276,7 +276,7 @@ $ </pre>
 
       <p>num=&lt;n&gt;x&lt;m&gt;で縦キー&lt;n&gt;個、横キー&lt;m&gt;個にすることができる。横キーはヘッダー&lt;m&gt;行に展開される。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 X1 Y1 Z1 1 8
 X1 Y1 Z2 2 7
 X1 Y2 Z1 3 6
@@ -287,7 +287,7 @@ X2 Y2 Z1 7 2
 X2 Y2 Z2 8 1
 $ </pre>
 
-      <pre class="cmd">$ map num=1x2 data
+      <pre class="prettyprint">$ map num=1x2 data
 *  * Y1 Y1 Y2 Y2		←横ヘッダーが2行になる
 *  * Z1 Z2 Z1 Z2
 X1 A  1  2  3  4
@@ -296,7 +296,7 @@ X2 A  5  6  7  8
 X2 B  4  3  2  1
 $ </pre>
 
-      <pre class="cmd">$ map +<a href="yarr.html">yarr</a> num=1x2 data
+      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1x2 data
 *  Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2		←横ヘッダーが2行になる
 *  Z1 Z1 Z2 Z2 Z1 Z1 Z2 Z2
 *  a  b  a  b  a  b  a  b
@@ -308,7 +308,7 @@ $ </pre>
 
       <p>-&lt;数字&gt;オプションとnum=&lt;n&gt;x&lt;m&gt;を組み合わせると次のように動作する。</p>
 
-      <pre class="cmd">$ cat data3
+      <pre class="prettyprint">$ cat data3
 X1 Y1 Z1 1 8 4 5 6 7
 X1 Y1 Z2 2 7 4 5 6 7
 X1 Y2 Z1 3 6 4 5 6 7
@@ -319,7 +319,7 @@ X2 Y2 Z1 7 2 4 5 6 7
 X2 Y2 Z2 8 1 4 5 6 7
 $ </pre>
 
-      <pre class="cmd">$ map -3 num=1x2 data3
+      <pre class="prettyprint">$ map -3 num=1x2 data3
 * * Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2
 * * Z1 Z1 Z2 Z2 Z1 Z1 Z2 Z2
 * *  a  b  a  b  a  b  a  b
@@ -331,7 +331,7 @@ X2 B  4  6  3  6  2  6  1  6
 X2 C  4  7  4  7  4  7  4  7
 $ </pre>
 
-      <pre class="cmd">$ map +<a href="yarr.html">yarr</a> -3 num=1x2 data3
+      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> -3 num=1x2 data3
 * * Y1 Y1 Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2 Y2 Y2
 * * Z1 Z1 Z1 Z2 Z2 Z2 Z1 Z1 Z1 Z2 Z2 Z2
 * *  a  b  c  a  b  c  a  b  c  a  b  c
@@ -345,13 +345,13 @@ $ </pre>
 
       <p>-nオプションを指定すると、付加するインデックスが数値になる。-nを付けない場合にはアルファベットwが使われるのでインデックス数が26個までという制限があるが、-nを指定した場合にはインデックスが26個に制限されず、データ部が多い場合もマップすることができる。</p>
 
-      <pre class="cmd">$ cat data4
+      <pre class="prettyprint">$ cat data4
 X1 Y1 A1 A2 A3 A4 -- A99 A100
 X1 Y2 B1 B2 B3 B4 -- B99 B100
 X1 Y3 C1 C2 C3 C4 -- C99 C100
 $ </pre>
 
-      <pre class="cmd">$ map -n num=1 data4
+      <pre class="prettyprint">$ map -n num=1 data4
 *  *   Y1   Y2   Y3
 X1  1   A1   B1   C1
 X1  2   A2   B2   C2
@@ -367,7 +367,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-49-15 19:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
