--- a/MANUALHTML/master-file.html
+++ b/MANUALHTML/master-file.html
@@ -131,7 +131,7 @@
 
       <p>マスタファイルの例は次のとおり。</p>
 
-      <pre class="source">001 新橋店
+      <pre class="prettyprint linenums">001 新橋店
 002 目黒店
 003 五反田店
 004 新宿店
@@ -150,7 +150,7 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-56-15 19:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
