--- a/MANUALHTML/name-format.html
+++ b/MANUALHTML/name-format.html
@@ -118,7 +118,7 @@
 
       <h3>【例1】</h3>
 
-      <pre class="source">ID 0001
+      <pre class="prettyprint linenums">ID 0001
 DATE 20111008
 AGE 23
 GENDER F
@@ -128,7 +128,7 @@ VALUE 0.845814</pre>
 
       <p>ネーム形式(5)では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
 
-      <pre class="source">ID 0000 001
+      <pre class="prettyprint linenums">ID 0000 001
 DATE 2011 10/08
 AGE 23
 GENDER F
@@ -142,7 +142,7 @@ VALUE 1 - 0.845814</pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-03-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
