--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -119,7 +119,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 a店 1日目 103  62		←店名 日付 売数 客数
 b店 1日目 210 113
 c店 1日目 81   52
@@ -129,7 +129,7 @@ $ </pre>
 
       <p>売数(第3フィールド)の店別構成比を求めて売数の次のフィールドに挿入するには、次のようにコマンドを実行する。</p>
 
-      <pre class="cmd">$ ratio key=3 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ ratio key=3 data |  <a href="keta.html">keta</a>
 a店 1日目 103 15.1  62		←第4フィールドが構成比になっている
 b店 1日目 210 30.9 113
 c店 1日目  81 11.9  52
@@ -141,7 +141,7 @@ $ </pre>
 
       <p>ref=で指定したフィールドをキーフィールドとし、キーフィールドの値が同じ行の中で構成比を計算して出力する。なお、キーフィールドはあらかじめ整列されていることが条件となる。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 a店 1日目 103  62		←店名 日付 売数 客数
 a店 2日目 157  94
 a店 3日目  62  30
@@ -161,7 +161,7 @@ $ </pre>
 
       <p>各日(第2フィールド)毎に店別の売数(第3フィールド)の構成比を求める。</p>
 
-      <pre class="cmd">$ sort -k2,2 -k1,1 data | ratio ref=2 key=3 | <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ sort -k2,2 -k1,1 data | ratio ref=2 key=3 | <a href="keta.html">keta</a>
 a店 1日目 103 15.1  62		←第4フィールドが1日目における構成比
 b店 1日目 210 30.9 113
 c店 1日目  81 11.9  52
@@ -183,7 +183,7 @@ $ </pre>
 
       <p>+&lt;n&gt;hオプションを付けると、先頭の&lt;n&gt;行を飛ばして構成比を計算する。先頭行に既に項目名などのヘッダーが付与されているデータを計算する場合などに使用する。新たに増える構成比のフィールドのヘッダーは@となる。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 店   日付 売数 客数		←項目名のヘッダー
 a店 1日目  103   62
 b店 1日目  210  113
@@ -194,7 +194,7 @@ $ </pre>
 
       <p>先頭行を飛ばして売数(第3フィールド)の店別構成比を求めて売数の次のフィールドに挿入する。</p>
 
-      <pre class="cmd">$ ratio +h key=3 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ ratio +h key=3 data |  <a href="keta.html">keta</a>
 店   日付 売数    @ 客数		←先頭行はそのまま(計算しない)
 a店 1日目  103 15.1   62		←第4フィールドが構成比になっている
 b店 1日目  210 30.9  113
@@ -207,7 +207,7 @@ $ </pre>
 
       <p>-&lt;数値&gt;で構成比の小数点以下の精度を指定できる。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 a店 1日目 103  62		←店名 日付 売数 客数
 b店 1日目 210 113
 c店 1日目 81   52
@@ -217,7 +217,7 @@ $ </pre>
 
       <p>売数(第3フィールド)の店別構成比を小数点3桁まで求める。</p>
 
-      <pre class="cmd">$ ratio -3 key=3 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ ratio -3 key=3 data |  <a href="keta.html">keta</a>
 a店 1日目 103 15.147  62
 b店 1日目 210 30.882 113
 c店 1日目  81 11.912  52
@@ -231,7 +231,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
