--- a/MANUALHTML/retu.html
+++ b/MANUALHTML/retu.html
@@ -116,7 +116,7 @@ Version	: Fri Oct 21 11:26:06 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -125,7 +125,7 @@ Version	: Fri Oct 21 11:26:06 JST 2011</pre>
 0000007 梶川______ 42 F 50 2  33 15 62
 $ </pre>
 
-      <pre class="cmd">$ retu data
+      <pre class="prettyprint">$ retu data
 9
 $ </pre>
 
@@ -133,25 +133,25 @@ $ </pre>
 
       <p>複数のファイルの列数(フィールド数)を一度にカウントできる。 同一ファイル内に違う列数の行があると、列数が変化した時点で列数を出力する。-fオプションをつけるとファイル名も出力される。</p>
 
-      <pre class="cmd">$ cat data1
+      <pre class="prettyprint">$ cat data1
 1 file1
 2 file1
 3 file1
 $ </pre>
 
-      <pre class="cmd">$ cat data2
+      <pre class="prettyprint">$ cat data2
 1 file2
 2
 $ </pre>
 
-      <pre class="cmd">$ cat data3
+      <pre class="prettyprint">$ cat data3
 1
 2 file3
 3
 4 file3
 $ </pre>
 
-      <pre class="cmd">$ retu data1 data2 data3
+      <pre class="prettyprint">$ retu data1 data2 data3
 2
 2
 1
@@ -163,9 +163,9 @@ $ </pre>
 
       <h3>【例3】</h3>
 
-      <p>-fオプションを使用するとファイル名と行数をそれぞれ表示する。</p>
+      <p>-fオプションを使用するとファイル名と列数をそれぞれ表示する。</p>
 
-      <pre class="cmd">$ retu -f data1 data2 data3
+      <pre class="prettyprint">$ retu -f data1 data2 data3
 data1 2
 data2 2
 data2 1
@@ -179,7 +179,7 @@ $ </pre>
 
       <p>ファイル名に-を指定すると標準入力からのデータ読み込みを期待する。</p>
 
-      <pre class="cmd">$ cat data2 | retu -f data1 - data3</pre>
+      <pre class="prettyprint">$ cat data2 | retu -f data1 - data3</pre>
 
       <h3>【関連項目】</h3>
 
@@ -187,7 +187,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-09-15 19:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
