--- a/MANUALHTML/self.html
+++ b/MANUALHTML/self.html
@@ -120,7 +120,7 @@ Version	: Wed Dec 14 15:20:01 JST 2011
 
       <p>テキストデータの第4フィールドと第2フィールドを取り出して出力する。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -128,7 +128,7 @@ Version	: Wed Dec 14 15:20:01 JST 2011
 0000005 崎村______ 50 F 82 79 16 21 80
 $ </pre>
 
-      <pre class="cmd">$ self 4 2 data
+      <pre class="prettyprint">$ self 4 2 data
 F 浜地______
 F 鈴田______
 F 杉山______
@@ -142,7 +142,7 @@ $ </pre>
 
       <p>たとえば第1フィールドの4文字目以降を出力するには次のようにコマンドを実行する。</p>
 
-      <pre class="cmd">$ self 1.4 2 data
+      <pre class="prettyprint">$ self 1.4 2 data
 0000 浜地______
 0001 鈴田______
 0003 杉山______
@@ -152,7 +152,7 @@ $ </pre>
 
       <p>第2フィールドの1文字目から半角4文字分(全角2文字分)出力する。</p>
 
-      <pre class="cmd">$ self 2.1.4 3 data
+      <pre class="prettyprint">$ self 2.1.4 3 data
 浜地 50
 鈴田 50
 杉山 26
@@ -164,7 +164,7 @@ $ </pre>
 
       <p>0で行全体を指定できる。</p>
 
-      <pre class="cmd">$ self 0 data
+      <pre class="prettyprint">$ self 0 data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -172,7 +172,7 @@ $ </pre>
 0000005 崎村______ 50 F 82 79 16 21 80
 $ </pre>
 
-      <pre class="cmd">$ self 4 0 data
+      <pre class="prettyprint">$ self 4 0 data
 F 0000000 浜地______ 50 F 91 59 20 76 54
 F 0000001 鈴田______ 50 F 46 39 8 5 21
 F 0000003 杉山______ 26 F 30 50 71 36 30
@@ -184,7 +184,7 @@ $ </pre>
 
       <p>連続したフィールドも記述できる。</p>
 
-      <pre class="cmd">$ self 2/5 data
+      <pre class="prettyprint">$ self 2/5 data
 浜地______ 50 F 91
 鈴田______ 50 F 46
 杉山______ 26 F 30
@@ -196,7 +196,7 @@ $ </pre>
 
       <p>NF(現在の行のフィールド数)を使用することができる。</p>
 
-      <pre class="cmd">$ self 1 NF-3 NF data
+      <pre class="prettyprint">$ self 1 NF-3 NF data
 0000000 59 54
 0000001 39 21
 0000003 50 30
@@ -208,12 +208,12 @@ $ </pre>
 
       <p>複数の空白があるフィールドを1つの空白にすることができる。</p>
 
-      <pre class="cmd">$ cat data2
+      <pre class="prettyprint">$ cat data2
 a    b
 c   d e
 $ </pre>
 
-      <pre class="cmd">$ self 1/NF data2
+      <pre class="prettyprint">$ self 1/NF data2
 a b
 c d e
 $ </pre>
@@ -222,7 +222,7 @@ $ </pre>
 
       <p>ダイレクトモードを使用して文字列を加工することができる。</p>
 
-      <pre class="cmd">$ self -d 1.1.4 "20070401 12345"
+      <pre class="prettyprint">$ self -d 1.1.4 "20070401 12345"
 2007
 $ </pre>
 
@@ -230,7 +230,7 @@ $ </pre>
 
       <p>selfの切り出し指定は画面表示長の半角文字分を1として扱う。</p>
 
-      <pre class="cmd">$ echo ｱｲｳｴｵｶｷｸｹｺ | self 1.3.4
+      <pre class="prettyprint">$ echo ｱｲｳｴｵｶｷｸｹｺ | self 1.3.4
 ｳｴｵｶ
 $ </pre>
 
@@ -244,13 +244,13 @@ $ </pre>
 
       <p>また、文字列切り出し指定において、切り取りや長さが文字の区切りに一致しないときにはエラーとなる。</p>
 
-      <pre class="cmd">$ echo ＵＳＰ研究所 | self 1.2.4
+      <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.2.4
 Errorself] : Rec 1. エラー
 $ </pre>
 
       <p>フィールドの幅より大きい開始位置を指定してもエラーとなる。</p>
 
-      <pre class="cmd">$ echo ＵＳＰ研究所 | self 1.20
+      <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.20
 Errorself] : Rec 1. エラー
 $ </pre>
 
@@ -260,7 +260,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-12-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
