--- a/MANUALHTML/sm5.html
+++ b/MANUALHTML/sm5.html
@@ -119,7 +119,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54		←各都市での調査データ
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -138,7 +138,7 @@ $ </pre>
 
       <p>大計を出する。</p>
 
-      <pre class="cmd">$ sm5 1 4 5 NF data
+      <pre class="prettyprint">$ sm5 1 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -160,7 +160,7 @@ $ </pre>
 
       <p><a href="sm4.html">sm4(1)</a>で小計よび中計が追加されたデータを処理する場合は次のようになる。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -181,7 +181,7 @@ $ </pre>
 04 神奈川県 @@ @@@@@@@@@@@@@@@@ 170 134 138 211 118
 $ </pre>
 
-      <pre class="cmd">$ sm5 1 4 5 NF data
+      <pre class="prettyprint">$ sm5 1 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -207,7 +207,7 @@ $ </pre>
 
       <p>データを集計する帳票をTukubaiで記述する場合、同じキーを集計して小計、中計を出して最後に大計を出す、という処理が頻出する。こういった場合は<a href="sm2.html">sm2(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a>を次のように多段に組み合わせて使用することが多い。</p>
 
-      <pre class="source">cat data		| 
+      <pre class="prettyprint linenums">cat data		| 
 sm2 1 6 7 NF		| 	←同一キーで集計
 sm4 1 4 5 6 7 NF	| 	←小計
 sm4 1 2 3 6 7 NF	| 	←中計
@@ -219,7 +219,7 @@ sm5 1 6 7 NF &gt; result		←大計を出力</pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-18-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
