--- a/MANUALHTML/sorter.html
+++ b/MANUALHTML/sorter.html
@@ -99,91 +99,126 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>gyo(1)</h2>
+      <h2>sorter(1)</h2>
 
       <h3>【名前】</h3>
 
-      <p>gyo : 行をカウント</p>
+      <p>sorter : キーでファイル分割する(キーについて整列不要)</p>
 
       <h3>【書式】</h3>
 
-      <pre class="list">Usage	: gyo [-f] &lt;file&gt; ...
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
+      <pre class="list">Usage   : sorter.NEW [options] &lt;filename&gt; &lt;file&gt;
+Options : -d : delete key
+          -a : append file
+          -z : compress
+Version : Mon Nov 18 12:16:37 JST 2013</pre>
 
       <h3>【説明】</h3>
 
-      <p>引数のファイルまたは標準入力のテキストデータの行数(行数)をカウントして出力する。</p>
+      <p>&lt;file&gt;を読み込み、分割先ファイル名&lt;filename&gt;で指定したキーフィールドの値が同一のレコードでファイルを分割する。たとえば、第2フィールドが同じ値を持つレコードでファイルを分割したいときはdata.%2のように&lt;filename&gt;を指定する。この時、分割先ファイル名は、data.(第2フィールドの値)となる。</p>
+
+      <p>sorterは<a href="keycut.html">keycut</a>と異なりキーフィールドの値は整列されている必要はない。また、レコードは発生順にファイルに分割されていくので分割結果も整列されない。</p>
+
+      <p>&lt;filename&gt;におけるキーフィールドは%(フィールド番号)と指定するが%5.2や%5.1.3のようにサブストリング指定も可能だ。%指定において%1.5を%{1.5}のように{}で範囲を明確にして記述することができる。</p>
 
       <h3>【例1】</h3>
 
-      <pre class="prettyprint">$ cat data
-0000000 浜地______ 50 F 91 59 20 76 54
-0000001 鈴田______ 50 F 46 39 8  5  21
-0000003 杉山______ 26 F 30 50 71 36 30
-0000004 白土______ 40 M 58 71 20 10 6
-0000005 崎村______ 50 F 82 79 16 21 80
-0000007 梶川______ 42 F 50 2  33 15 62
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data
-6
-$ </pre>
+      <pre class="prettyprint">$ at data
+04 神奈川県 13 横浜市 92 56 83 96 75
+01 埼玉県 03 熊谷市 82 0 23 84 10
+03 千葉県 10 千葉市 52 91 44 9 0
+02 東京都 04 新宿区 30 50 71 36 30
+01 埼玉県 01 さいたま市 91 59 20 76 54
+03 千葉県 12 柏市 95 60 35 93 76
+04 神奈川県 16 小田原市 45 21 24 39 03
+02 東京都 05 中央区 78 13 44 28 51
+$ sorter data.%1 data
+$ ls -l data.*
+-rw-r--r-- 1 usp usp 87 2月 19 11:14 data.01       ↑
+-rw-r--r-- 1 usp usp 82 2月 19 11:14 data.02 ４つのファイルに
+-rw-r--r-- 1 usp usp 77 2月 19 11:14 data.03 分割された
+-rw-r--r-- 1 usp usp 91 2月 19 11:14 data.04       ↓
+$ cat data.01
+01 埼玉県 03 熊谷市 82 0 23 84 10
+01 埼玉県 01 さいたま市 91 59 20 76 54
+$ cat data.02
+02 東京都 04 新宿区 30 50 71 36 30
+02 東京都 05 中央区 78 13 44 28 51
+$ cat data.03
+03 千葉県 10 千葉市 52 91 44 9 0
+03 千葉県 12 柏市 95 60 35 93 76
+$ cat data.04
+04 神奈川県 13 横浜市 92 56 83 96 75
+04 神奈川県 16 小田原市 45 21 24 39 03
+$</pre>
 
       <h3>【例2】</h3>
 
-      <p>複数のファイルの行数を一度にカウントできる。</p>
-
-      <pre class="prettyprint">$ cat data1
-1 file1
-2 file1
-3 file1
-$ </pre>
-
-      <pre class="prettyprint">$ cat data2
-1 file2
-2 file2
-$ </pre>
-
-      <pre class="prettyprint">$ cat data3
-1 file3
-2 file3
-3 file3
-4 file3
-$ </pre>
-
-      <pre class="prettyprint">$ gyo data1 data2 data3
-3
-2
-4
-$ </pre>
+      <pre class="prettyprint">$ sorter data.%1.2.1 data
+$ ls -l data.*
+-rw-r--r-- 1 usp usp 87 2月 19 11:15 data.1
+-rw-r--r-- 1 usp usp 82 2月 19 11:15 data.2
+-rw-r--r-- 1 usp usp 77 2月 19 11:15 data.3
+-rw-r--r-- 1 usp usp 91 2月 19 11:15 data.4
+$</pre>
 
       <h3>【例3】</h3>
 
-      <p>"-f"オプションを使用するとファイル名と行数をそれぞれ表示する。</p>
+      <p>-aオプションを指定すると分割先ファイルは追記されている。分割先ファイルが無いときは新たに作成されている。このオプションを指定しないときはファイルは上書きされている。</p>
 
-      <pre class="prettyprint">$ gyo -f data1 data2 data3
-data1 3
-data2 2
-data3 4
-$ </pre>
+      <pre class="prettyprint">$ sorter data.%1 data
+$ sorter -a data.%1 data
+$ ls -l data.*
+-rw-r--r-- 1 usp usp 174 2月 19 11:16 data.01
+-rw-r--r-- 1 usp usp 164 2月 19 11:16 data.02
+-rw-r--r-- 1 usp usp 154 2月 19 11:16 data.03
+-rw-r--r-- 1 usp usp 182 2月 19 11:16 data.04
+$</pre>
+
+      <h3>【例4】</h3>
+
+      <p>-dオプションを指定するとキーフィールドを除いたレコードを分割先ファイルに作成する。キーフィールド指定が%1.2.1等のサブストリグン指定であっても、キーフィールド全体(この例だと第1フィールド全体)が取り除かれる。</p>
+
+      <pre class="prettyprint">$ $ sorter -d data.%1 data
+$ ls -l data.*
+-rw-r--r-- 1 usp usp 81 2月 19 13:13 data.01
+-rw-r--r-- 1 usp usp 76 2月 19 13:13 data.02
+-rw-r--r-- 1 usp usp 71 2月 19 13:13 data.03
+-rw-r--r-- 1 usp usp 85 2月 19 13:13 data.04
+$ cat data.01
+埼玉県 03 熊谷市 82 0 23 84 10
+埼玉県 01 さいたま市 91 59 20 76 54
+$</pre>
+
+      <h3>【例5】</h3>
+
+      <p>-zオプションを指定すると出力ファイルがgzip圧縮形式になる。</p>
+
+      <pre class="prettyprint">$ sorter -z data.%1.gz data
+$ ls -l data.*
+-rw-r--r-- 1 usp usp  98 2月 19 13:17 data.01.gz
+-rw-r--r-- 1 usp usp  94 2月 19 13:17 data.02.gz
+-rw-r--r-- 1 usp usp  82 2月 19 13:17 data.03.gz
+-rw-r--r-- 1 usp usp 100 2月 19 13:17 data.04.gz
+$ gunzip < data.01.gz
+01 埼玉県 03 熊谷市 82 0 23 84 10
+01 埼玉県 01 さいたま市 91 59 20 76 54
+$</pre>
 
       <h3>【備考】</h3>
 
-      <p>ファイル名に - を指定すると標準入力ファイルを期待する。</p>
+      <p>sorter(1)は基本的には入力ファイルをすべて読み込んでから処理する。ただし、メモリが不足したときおよび物理メモリの半分以上を使用した場合は、一旦ファイルへ出力してから処理を続行する。</p>
 
-      <pre class="prettyprint">$ cat data2 |  gyo -f data1 - data3
-data1 3
-data2 2
-data3 4
-$ </pre>
+      <p>-aオプションと-zを併用したときはすでに存在する圧縮ファイルに圧縮ファイルが追記されている。出力ファイルはgunzipで正しく解凍される。</p> 
+
+      <p>sorter.cはzlibを使用している。コンパイル時はcc -static -O3 -o sorter sorter.c -lzのようにオプションを指定する。</p>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="count.html">count(1)</a>、<a href="juni.html">juni(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
-
+      <p><a href="keycut.html">keycut(1)</a>、<a href="field-format.html">フィールド形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">last modified: 2014-39-27 17:02:27</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
