--- a/MANUALHTML/tag-format.html
+++ b/MANUALHTML/tag-format.html
@@ -124,7 +124,7 @@
 
       <h3>【例1】</h3>
 
-      <pre class="source">ID DATE AGE GENDER VALUE
+      <pre class="prettyprint linenums">ID DATE AGE GENDER VALUE
 0001 20111008 23 F 0.845814
 0002 20111009 15 M 0.193475
 0003 20111010 81 F 0.484983
@@ -142,7 +142,7 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-22-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
