--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -116,19 +116,19 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat file1
+      <pre class="prettyprint">$ cat file1
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 $ </pre>
 
-      <pre class="cmd">$ cat file2
+      <pre class="prettyprint">$ cat file2
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
 $ </pre>
 
-      <pre class="cmd">$ tcat file1 file2
+      <pre class="prettyprint">$ tcat file1 file2
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 0000008 角屋______   50    F 52 91 44  9  0
@@ -143,7 +143,7 @@ $ </pre>
 
       <p>2行あけて連結するには次のようにコマンドを実行する。</p>
 
-      <pre class="cmd">$ tcat -2 file1 file2
+      <pre class="prettyprint">$ tcat -2 file1 file2
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 
@@ -158,7 +158,7 @@ $ </pre>
 
       <p>標準入力から読み込む場合、標準入力側のテキストを引数-で指定する。</p>
 
-      <pre class="cmd">$ cat file1 | tcat - file2</pre>
+      <pre class="prettyprint">$ cat file1 | tcat - file2</pre>
 
       <h3>【関連項目】</h3>
 
@@ -166,7 +166,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
