--- a/MANUALHTML/transaction-file.html
+++ b/MANUALHTML/transaction-file.html
@@ -122,7 +122,7 @@
 
       <p>トランザクションファイル(5)の例は次のとおり。</p>
 
-      <pre class="source">20110405 001 13513543
+      <pre class="prettyprint linenums">20110405 001 13513543
 20110405 002 3403346
 20110406 001 3543024
 20110406 002 12412311
@@ -139,7 +139,7 @@
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-27-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
