--- a/MANUALHTML/unmap.html
+++ b/MANUALHTML/unmap.html
@@ -121,13 +121,13 @@ Version	: Sat Dec 10 21:04:17 JST 2011
 
       <p>表データを縦型ファイルに変換する。num=&lt;n&gt;の値は縦キーのフィールド数を表す。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 *   * 01/01 01/02
 001 a店   103   157
 002 b店   210   237
 $ </pre>
 
-      <pre class="cmd">$ un<a href="map.html">map</a> num=2 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ un<a href="map.html">map</a> num=2 data |  <a href="keta.html">keta</a>
 001 a店 01/01 103
 001 a店 01/02 157
 002 b店 01/01 210
@@ -138,7 +138,7 @@ $ </pre>
 
       <p>データ部が複数種ある場合は、複数列にマッピングする。</p>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 * * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 A   103   157    62   131   189   350   412
 a店 B    62    94    30    84   111    20   301
@@ -150,7 +150,7 @@ d店 A    75    72    34    74    91    98   101
 d店 B    48    42    19    43    51    69    90
 $ </pre>
 
-      <pre class="cmd">$ un<a href="map.html">map</a> num=1 data |  <a href="keta.html">keta</a>
+      <pre class="prettyprint">$ un<a href="map.html">map</a> num=1 data |  <a href="keta.html">keta</a>
 a店 1日目 103 62
 a店 2日目 157 94
 a店 3日目 62 30
@@ -167,7 +167,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-27-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
