--- a/MANUALHTML/yarr.html
+++ b/MANUALHTML/yarr.html
@@ -117,7 +117,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】基本的な使い方</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91
 0000000 浜地______ 50 F 59
 0000000 浜地______ 50 F 20
@@ -136,7 +136,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0000004 白土______ 40 M 10
 $ </pre>
 
-      <pre class="cmd">$ yarr num=4 data
+      <pre class="prettyprint">$ yarr num=4 data
 0000000 浜地______ 50 F 91 59 20 76
 0000001 鈴田______ 50 F 46 39 8 5
 0000003 杉山______ 26 F 30 50 71 36
@@ -147,7 +147,7 @@ $ </pre>
 
       <p>-&lt;n&gt;オプションを使うことで&lt;n&gt;個ずつ横展開できる。</p>
 
-      <pre class="cmd">$ yarr -2 num=4 data &gt; data3
+      <pre class="prettyprint">$ yarr -2 num=4 data &gt; data3
 $ cat data3
 0000000 浜地______ 50 F 91 59
 0000000 浜地______ 50 F 20 76
@@ -163,14 +163,14 @@ $ </pre>
 
       <p>num=&lt;n&gt;を指定しない場合単純に横展開する。</p>
 
-      <pre class="cmd">$ cat data4
+      <pre class="prettyprint">$ cat data4
 1
 2
 3
 4
 $ </pre>
 
-      <pre class="cmd">$ yarr data4
+      <pre class="prettyprint">$ yarr data4
 1 2 3 4
 $ </pre>
 
@@ -178,7 +178,7 @@ $ </pre>
 
 -d&lt;str&gt; オプションは横展開するときのフィールドセパレータを指定する。
 
-      <pre class="cmd">$ yarr -d@ num=4 data &gt; data2
+      <pre class="prettyprint">$ yarr -d@ num=4 data &gt; data2
 $ cat data2
 0000000 浜地______ 50 F 91@59@20@76
 0000001 鈴田______ 50 F 46@39@8@5
@@ -186,7 +186,7 @@ $ cat data2
 0000004 白土______ 40 M 58@71@20@10
 $ </pre>
 
-      <pre class="cmd">$ yarr -d'n' num=4 data
+      <pre class="prettyprint">$ yarr -d'n' num=4 data
 0000000 浜地______ 50 F 91n59n20n76
 0000001 鈴田______ 50 F 46n39n8n5
 0000003 杉山______ 26 F 30n50n71n36
@@ -199,7 +199,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2012-19-01 16:08:01</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
