--- a/MANUALHTML/ycat.html
+++ b/MANUALHTML/ycat.html
@@ -117,7 +117,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 
       <h3>【例1】基本的な使い方</h3>
 
-      <pre class="cmd">$ cat file1
+      <pre class="prettyprint">$ cat file1
 0000000 浜地______ 50 F
 0000001 鈴田______ 50 F
 0000003 杉山______ 26 F
@@ -126,7 +126,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 0000007 梶川______ 42 F
 $ </pre>
 
-      <pre class="cmd">$ cat file2
+      <pre class="prettyprint">$ cat file2
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -135,7 +135,7 @@ $ </pre>
 0000007 50 2  33 15 62
 $ </pre>
 
-      <pre class="cmd">$ ycat file1 file2
+      <pre class="prettyprint">$ ycat file1 file2
 0000000 浜地______ 50 F 0000000 91 59 20 76 54
 0000001 鈴田______ 50 F 0000001 46 39 8  5  21
 0000003 杉山______ 26 F 0000003 30 50 71 36 30
@@ -148,7 +148,7 @@ $ </pre>
 
       <p>-&lt;n&gt;オプションを使用すると、ファイルを&lt;n&gt;で指定した空白の分だけ間を空けることができる。</p>
 
-      <pre class="cmd">$ ycat -3 file1 file2
+      <pre class="prettyprint">$ ycat -3 file1 file2
 0000000 浜地______ 50 F   0000000 91 59 20 76 54
 0000001 鈴田______ 50 F   0000001 46 39 8  5  21
 0000003 杉山______ 26 F   0000003 30 50 71 36 30
@@ -161,7 +161,7 @@ $ </pre>
 
       <p>-0を指定した場合にはファイルの隙間は追加されない。</p>
 
-      <pre class="cmd">ycat -0 file1 file2
+      <pre class="prettyprint">ycat -0 file1 file2
 0000000 浜地______ 50 F0000000 91 59 20 76 54
 0000001 鈴田______ 50 F0000001 46 39 8  5  21
 0000003 杉山______ 26 F0000003 30 50 71 36 30
@@ -174,15 +174,15 @@ $ </pre>
 
       <p>テキストを標準入力から読み込む場合には-を記述する。</p>
 
-      <pre class="cmd">$ cat file1 | ycat - file2</pre>
+      <pre class="prettyprint">$ cat file1 | ycat - file2</pre>
 
-      <pre class="cmd">$ cat file2 | ycat file1 -</pre>
+      <pre class="prettyprint">$ cat file2 | ycat file1 -</pre>
 
       <h3>【備考】</h3>
 
       <p>ycat(1)は連結後の各ファイルの形が崩れないように、はじめに各ファイルの最大幅を測っている。このため、単純に空白横連結したいだけなら次のようにpaste(1)コマンドを使う方が高速となる。</p>
 
-      <pre class="cmd">$ paste -d" " file1 file2 file3</pre>
+      <pre class="prettyprint">$ paste -d" " file1 file2 file3</pre>
 
       <h3>【関連項目】</h3>
 
@@ -190,7 +190,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-31-15 20:04:15</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
