--- a/MANUALHTML/yobi.html
+++ b/MANUALHTML/yobi.html
@@ -117,7 +117,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 
       <h3>【例1】</h3>
 
-      <pre class="cmd">$ cat data
+      <pre class="prettyprint">$ cat data
 0001 0000007 20060201 117 8335 -145
 0001 0000007 20060203 221 15470 0
 0001 0000007 20060205 85 5950 0
@@ -128,7 +128,7 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0002 0000007 20060210 444 31080 0
 $ </pre>
 
-      <pre class="cmd">$ yobi 3 data
+      <pre class="prettyprint">$ yobi 3 data
 0001 0000007 20060201 3 117 8335 -145
 0001 0000007 20060203 5 221 15470 0
 0001 0000007 20060205 0 85 5950 0
@@ -143,7 +143,7 @@ $ </pre>
 
       <p>-eオプションを指定すると英語表記の曜日を挿入して出力する。</p>
 
-      <pre class="cmd">$ yobi -e 3 data
+      <pre class="prettyprint">$ yobi -e 3 data
 0001 0000007 20060201 Wed 117 8335 -145
 0001 0000007 20060203 Fri 221 15470 0
 0001 0000007 20060205 Sun 85 5950 0
@@ -158,7 +158,7 @@ $ </pre>
 
       <p>-jオプションで日本語表記の曜日を挿入して出力する。</p>
 
-      <pre class="cmd">$ yobi -j 3 data
+      <pre class="prettyprint">$ yobi -j 3 data
 0001 0000007 20060201 水 117 8335 -145
 0001 0000007 20060203 金 221 15470 0
 0001 0000007 20060205 日 85 5950 0
@@ -173,15 +173,15 @@ $ </pre>
 
       <p>-dオプションで引数に指定した日付に対して曜日を算出する。</p>
 
-      <pre class="cmd">$ yobi -d 20080112
+      <pre class="prettyprint">$ yobi -d 20080112
 6
 $ </pre>
 
-      <pre class="cmd">$ yobi -de 20080112
+      <pre class="prettyprint">$ yobi -de 20080112
 Sat
 $ </pre>
 
-      <pre class="cmd">$ yobi -dj 20080112
+      <pre class="prettyprint">$ yobi -dj 20080112
 土
 $ </pre>
 
@@ -191,7 +191,7 @@ $ </pre>
 
     </div>
 
-    <div id="lastmodified">last modified: 2013-22-16 17:04:16</div>
+    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
 
     <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
